@@ -1536,81 +1536,93 @@ def mame_update_MAME_Fav_objects(PATHS, control_dic, machines, machines_render, 
     line1_str = 'Checking/Updating MAME Favourites ...'
     pDialog.create('Advanced MAME Launcher', line1_str)
     fav_machines = fs_load_JSON_file_dic(PATHS.FAV_MACHINES_PATH.getPath())
-    num_iteration = len(fav_machines)
-    iteration = 0
-    for fav_key in sorted(fav_machines):
+    if len(fav_machines) > 1:
+        num_iteration = len(fav_machines)
+        iteration = 0
+        for fav_key in sorted(fav_machines):
+            pDialog.update((iteration*100) // num_iteration, line1_str)
+            log_debug('Checking Favourite "{0}"'.format(fav_key))
+            if fav_key in machines:
+                machine = machines[fav_key]
+                m_render = machines_render[fav_key]
+                assets = assets_dic[fav_key]
+                new_fav = fs_get_MAME_Favourite_full(fav_key, machine, m_render, assets, control_dic)
+                fav_machines[fav_key] = new_fav
+                log_debug('Updated machine    "{0}"'.format(fav_key))
+            else:
+                log_debug('Machine "{0}" not found in MAME main DB'.format(fav_key))
+                t = 'Favourite machine "{0}" not found in database'.format(fav_key)
+                kodi_dialog_OK(t)
+            iteration += 1
+        fs_write_JSON_file(PATHS.FAV_MACHINES_PATH.getPath(), fav_machines)
         pDialog.update((iteration*100) // num_iteration, line1_str)
-        log_debug('Checking Favourite "{0}"'.format(fav_key))
-        if fav_key in machines:
-            machine = machines[fav_key]
-            m_render = machines_render[fav_key]
-            assets = assets_dic[fav_key]
-            new_fav = fs_get_MAME_Favourite_full(fav_key, machine, m_render, assets, control_dic)
-            fav_machines[fav_key] = new_fav
-            log_debug('Updated machine    "{0}"'.format(fav_key))
-        else:
-            log_debug('Machine "{0}" not found in MAME main DB'.format(fav_key))
-            t = 'Favourite machine "{0}" not found in database'.format(fav_key)
-            kodi_dialog_OK(t)
-        iteration += 1
-    fs_write_JSON_file(PATHS.FAV_MACHINES_PATH.getPath(), fav_machines)
-    pDialog.update((iteration*100) // num_iteration, line1_str)
+    else:
+        fs_write_JSON_file(PATHS.FAV_MACHINES_PATH.getPath(), fav_machines)
+        pDialog.update(100, line1_str)
     pDialog.close()
 
 def mame_update_MAME_MostPlay_objects(PATHS, control_dic, machines, machines_render, assets_dic, pDialog):
     line1_str = 'Checking/Updating MAME Most Played machines ...'
     pDialog.create('Advanced MAME Launcher', line1_str)
     most_played_roms_dic = fs_load_JSON_file_dic(PATHS.MAME_MOST_PLAYED_FILE_PATH.getPath())
-    num_iteration = len(most_played_roms_dic)
-    iteration = 0
-    for fav_key in sorted(most_played_roms_dic):
-        pDialog.update((iteration*100) // num_iteration, line1_str)
-        log_debug('Checking Most Played machine "{0}"'.format(fav_key))
-        if fav_key in machines:
-            if 'launch_count' in most_played_roms_dic[fav_key]:
-                launch_count = most_played_roms_dic[fav_key]['launch_count']
+    if len(most_played_roms_dic) > 1:
+        num_iteration = len(most_played_roms_dic)
+        iteration = 0
+        for fav_key in sorted(most_played_roms_dic):
+            pDialog.update((iteration*100) // num_iteration, line1_str)
+            log_debug('Checking Most Played machine "{0}"'.format(fav_key))
+            if fav_key in machines:
+                if 'launch_count' in most_played_roms_dic[fav_key]:
+                    launch_count = most_played_roms_dic[fav_key]['launch_count']
+                else:
+                    launch_count = 1
+                machine = machines[fav_key]
+                m_render = machines_render[fav_key]
+                assets = assets_dic[fav_key]
+                new_fav = fs_get_MAME_Favourite_full(fav_key, machine, m_render, assets, control_dic)
+                new_fav['launch_count'] = launch_count
+                most_played_roms_dic[fav_key] = new_fav
+                log_debug('Updated machine              "{0}"'.format(fav_key))
             else:
-                launch_count = 1
-            machine = machines[fav_key]
-            m_render = machines_render[fav_key]
-            assets = assets_dic[fav_key]
-            new_fav = fs_get_MAME_Favourite_full(fav_key, machine, m_render, assets, control_dic)
-            new_fav['launch_count'] = launch_count
-            most_played_roms_dic[fav_key] = new_fav
-            log_debug('Updated machine              "{0}"'.format(fav_key))
-        else:
-            log_debug('Machine "{0}" not found in MAME main DB'.format(fav_key))
-            t = 'Favourite machine "{0}" not found in database'.format(fav_key)
-            kodi_dialog_OK(t)
-        iteration += 1
-    fs_write_JSON_file(PATHS.MAME_MOST_PLAYED_FILE_PATH.getPath(), most_played_roms_dic)
-    pDialog.update((iteration*100) // num_iteration, line1_str)
+                log_debug('Machine "{0}" not found in MAME main DB'.format(fav_key))
+                t = 'Favourite machine "{0}" not found in database'.format(fav_key)
+                kodi_dialog_OK(t)
+            iteration += 1
+        fs_write_JSON_file(PATHS.MAME_MOST_PLAYED_FILE_PATH.getPath(), most_played_roms_dic)
+        pDialog.update((iteration*100) // num_iteration, line1_str)
+    else:
+        fs_write_JSON_file(PATHS.MAME_MOST_PLAYED_FILE_PATH.getPath(), most_played_roms_dic)
+        pDialog.update(100, line1_str)
     pDialog.close()
 
 def mame_update_MAME_RecentPlay_objects(PATHS, control_dic, machines, machines_render, assets_dic, pDialog):
     line1_str = 'Checking/Updating MAME Recently Played machines ...'
     pDialog.create('Advanced MAME Launcher', line1_str)
     recent_roms_list = fs_load_JSON_file_list(PATHS.MAME_RECENT_PLAYED_FILE_PATH.getPath())
-    num_iteration = len(recent_roms_list)
-    iteration = 0
-    for i, recent_rom in enumerate(recent_roms_list):
+    if len(recent_roms_list) > 1:
+        num_iteration = len(recent_roms_list)
+        iteration = 0
+        for i, recent_rom in enumerate(recent_roms_list):
+            pDialog.update((iteration*100) // num_iteration, line1_str)
+            fav_key = recent_rom['name']
+            log_debug('Checking Recently Played "{0}"'.format(fav_key))
+            if fav_key in machines:
+                machine = machines[fav_key]
+                m_render = machines_render[fav_key]
+                assets = assets_dic[fav_key]
+                new_fav = fs_get_MAME_Favourite_full(fav_key, machine, m_render, assets, control_dic)
+                recent_roms_list[i] = new_fav
+                log_debug('Updated machine          "{0}"'.format(fav_key))
+            else:
+                log_debug('Machine "{0}" not found in MAME main DB'.format(fav_key))
+                t = 'Favourite machine "{0}" not found in database'.format(fav_key)
+                kodi_dialog_OK(t)
+            iteration += 1
+        fs_write_JSON_file(PATHS.MAME_RECENT_PLAYED_FILE_PATH.getPath(), recent_roms_list)
         pDialog.update((iteration*100) // num_iteration, line1_str)
-        fav_key = recent_rom['name']
-        log_debug('Checking Recently Played "{0}"'.format(fav_key))
-        if fav_key in machines:
-            machine = machines[fav_key]
-            m_render = machines_render[fav_key]
-            assets = assets_dic[fav_key]
-            new_fav = fs_get_MAME_Favourite_full(fav_key, machine, m_render, assets, control_dic)
-            recent_roms_list[i] = new_fav
-            log_debug('Updated machine          "{0}"'.format(fav_key))
-        else:
-            log_debug('Machine "{0}" not found in MAME main DB'.format(fav_key))
-            t = 'Favourite machine "{0}" not found in database'.format(fav_key)
-            kodi_dialog_OK(t)
-        iteration += 1
-    fs_write_JSON_file(PATHS.MAME_RECENT_PLAYED_FILE_PATH.getPath(), recent_roms_list)
-    pDialog.update((iteration*100) // num_iteration, line1_str)
+    else:
+        fs_write_JSON_file(PATHS.MAME_RECENT_PLAYED_FILE_PATH.getPath(), recent_roms_list)
+        pDialog.update(100, line1_str)
     pDialog.close()
 
 def mame_update_SL_Fav_objects(PATHS, control_dic, SL_catalog_dic, pDialog):
@@ -1632,6 +1644,7 @@ def mame_update_SL_Fav_objects(PATHS, control_dic, SL_catalog_dic, pDialog):
         # >> Update progress dialog (BEGIN)
         update_number = (num_iteration * 100) // num_SL_favs
         pDialog.update(update_number, 'Checking SL Favourites (ROM "{0}") ...'.format(fav_ROM_name))
+        num_iteration += 1
 
         # >> Load SL ROMs DB and assets
         file_name =  SL_catalog_dic[fav_SL_name]['rom_DB_noext'] + '.json'
@@ -1653,9 +1666,6 @@ def mame_update_SL_Fav_objects(PATHS, control_dic, SL_catalog_dic, pDialog):
             log_debug('Machine "{0}" / "{1}" not found in SL main DB'.format(fav_ROM_name, fav_SL_name))
             t = 'Favourite machine "{0}" in SL "{1}" not found in database'.format(fav_ROM_name, fav_SL_name)
             kodi_dialog_OK(t)
-
-        # >> Update progress dialog (END)
-        num_iteration += 1
     fs_write_JSON_file(PATHS.FAV_SL_ROMS_PATH.getPath(), fav_SL_roms)
     pDialog.update(100)
     pDialog.close()
@@ -1683,6 +1693,7 @@ def mame_update_SL_MostPlay_objects(PATHS, control_dic, SL_catalog_dic, pDialog)
         # >> Update progress dialog (BEGIN)
         update_number = (num_iteration * 100) // num_SL_favs
         pDialog.update(update_number, 'Checking SL Most Played (ROM "{0}") ...'.format(fav_ROM_name))
+        num_iteration += 1
 
         # >> Load SL ROMs DB and assets
         file_name =  SL_catalog_dic[fav_SL_name]['rom_DB_noext'] + '.json'
@@ -1704,9 +1715,6 @@ def mame_update_SL_MostPlay_objects(PATHS, control_dic, SL_catalog_dic, pDialog)
             log_debug('Machine "{0}" / "{1}" not found in SL main DB'.format(fav_SL_name, fav_ROM_name))
             t = 'Favourite machine "{0}" in SL "{1}" not found in SL database'.format(fav_SL_name, fav_ROM_name)
             kodi_dialog_OK(t)
-
-        # >> Update progress dialog (END)
-        num_iteration += 1
     fs_write_JSON_file(PATHS.SL_MOST_PLAYED_FILE_PATH.getPath(), most_played_roms_dic)
     pDialog.update(100)
     pDialog.close()
@@ -1730,6 +1738,7 @@ def mame_update_SL_RecentPlay_objects(PATHS, control_dic, SL_catalog_dic, pDialo
         # >> Update progress dialog (BEGIN)
         update_number = (num_iteration * 100) // num_SL_favs
         pDialog.update(update_number, 'Checking SL Recently Played (ROM "{0}") ...'.format(fav_ROM_name))
+        num_iteration += 1
 
         # >> Load SL ROMs DB and assets
         file_name =  SL_catalog_dic[fav_SL_name]['rom_DB_noext'] + '.json'
@@ -1750,8 +1759,6 @@ def mame_update_SL_RecentPlay_objects(PATHS, control_dic, SL_catalog_dic, pDialo
             log_debug('Machine "{0}" / "{1}" not found in SL main DB'.format(fav_SL_name, fav_ROM_name))
             t = 'Favourite machine "{0}" in SL "{1}" not found in SL database'.format(fav_SL_name, fav_ROM_name)
             kodi_dialog_OK(t)
-        # >> Update progress dialog (END)
-        num_iteration += 1
     fs_write_JSON_file(PATHS.SL_RECENT_PLAYED_FILE_PATH.getPath(), recent_roms_list)
     pDialog.update(100)
     pDialog.close()
