@@ -21,9 +21,11 @@ WIP      [MANUALS] Support for CBZ/CBR manuals.
 
 [B]Advanced Emulator Launcher | version 0.9.7 | xx June 2018[/B]
 
-WIP      Reduce the memory consumption during the database generation.
+FEATURE  Reduce the memory consumption during the database generation.
          By default use the options OPTION_COMPACT_JSON = True and OPTION_LOWMEM_WRITE_JSON = True
          See https://stackoverflow.com/questions/24239613/memoryerror-using-json-dumps
+
+FIX      Fix crash when executing "Check/Update all object" if Favourites are empty.
 
 
 [B]Advanced Emulator Launcher | version 0.9.6 | 25 May 2018[/B]
